<resources>
    <string name="app_name">Matched Betting Calculator</string>
    <string name="settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="back_bet_stake">Back Bet Stake</string>
    <string name="back_bet_odds">Back Bet Odds</string>
    <string name="exchange_lay_odds">Lay Odds</string>
    <string name="exchange_commission">Lay Commission</string>
    <string name="lay_stake">Lay Stake</string>
    <string name="copy_clipboard">Copy</string>
    <string name="bet_info">Bet Info</string>
    <string name="calculate">Calculate</string>

    <string name="profit_back_wins">If Back Bet Wins</string>
    <string name="profit_lay_wins">If Lay Bet Wins</string>

    <string name="event">Event</string>
    <string name="matched_bet_input_details">Matched Bet Input Details</string>
    <string name="exchange">Exchange</string>
    <string name="date_time">Date/Time</string>
    <string name="bet_outcome">Bet Outcome</string>
    <string name="bookmaker">Bookmaker</string>
    <string name="results">Results</string>
    <string name="lay_liability">Lay Liability</string>

    <string name="qualifier">Qualifier</string>
    <string name="snr">SNR (Free Bet)</string>
    <string name="sr">SR (Free Bet)</string>

    <string name="normal">Normal</string>
    <string name="underlay">Underlay</string>
    <string name="overlay">Overlay</string>


    <string name="lay_stake_copied_to_clipboard">Lay stake copied to clipboard</string>
    <string name="calculator">Calculator</string>
    <string name="saved_bets">Saved Bets</string>
    <string name="bet_saved">Bet saved</string>
    <string name="please_enter_bet_input_details">Please enter sufficient input details</string>
    <string name="set_bet_title">Set Bet Title</string>
    <string name="copied_to_clipboard">copied to clipboard</string>


    <string name="set_reminder_for_bet">Set reminder for bet?</string>
    <string name="set_reminder">Set reminder</string>
    <string name="cancel">Cancel</string>

    <string name="percent"> %</string>
    <string name="pounds">£</string>

    <string name="bet_reminder_channel_id" translatable="false">bet_reminder_channel</string>
    <string name="bet_reminder_channel_name" translatable="true">Bet Reminders</string>
    <string name="help">Help</string>

    <string name="intro">This application provides a variety of calculators for matched betting.  It is expected that the user has prior knowledge of matched betting strategies. The appropriate lay stakes and profits are calculated and displayed automatically on input of data.\n\nThe application also includes a ‘Bet Reminder’ function to set notification reminders at a time in the future.</string>

    <string name="user_guide">User Guide</string>
    <string name="matched_betting_calc_guide">This calculator is used for normal matched betting calculations. Firstly, make sure you select the correct type of bet: \n\n\u25CF Qualifier: Standard back and lay bet. Also used for arbitrage bets \n\u25CF SNR (Stake not returned free bet) : Bookmaker free bet which returns only the winnings from the free bet and not the stake \n\u25CF SR (Stake returned free bet): Bookmaker free bet which returns the stake with the winnings\n\nEnter the relevant input details to show results. Results can be displayed as normal, underlay, overlay or custom. Selecting custom will allow you to vary the lay stake using the slider bar.\n\nCalculator also used for partially matched bets where the original lay bet did not get fully matched. Select ‘Partially Matched’ and enter the details of the partially matched bet. Make sure to set the current market lay odds in the main input data and the appropriate lay stakes will be calculated to match the bet.</string>
    <string name="each_way_calc_guide">Used for each way matched bets and each way extra place offers. Select correct type of bet: Qualifier, SNR or SR and enter relevant input data to show results. Check the ‘Extra Place Offer’ checkbox to also show potential profit of an extra place if the bookmaker is paying out more places than the exchange.</string>
    <string name="refund_calc_guide">Used for offers where the bookmaker refunds stake on losing bets as either cash or free bet. If the refund is cash set the ‘Refund Retention’ to 100%. If the refund is a free bet set this to the percentage of the free bet you expect to turn into cash (typically 70%-80%). The results will show the required lay stake to lock in a profit.</string>
    <string name="refund_if_calc_guide">Used for offers where the bookmaker refunds stakes as either cash or free bet due a specific outcome or trigger happening. For example, a refund on bets on a football game if a specific player scores, or a refund on a horse racing bet if the favourite wins. As well as laying the initial bet, the refund trigger can be layed as well to lock in a profit. Can also be used for 4/1 offers, in which case the refund trigger is the same as the initial bet and overall lay stake would be the sum of the initial and refund trigger lay stakes shown in the results.</string>
    <string name="early_payout_calc_guide">Used for offers where the bookmaker pays out early during an event. For example, they pay out a football team as the winner if they go 2 goals up during the game. At this point, an in-play back bet can be placed to lock in a profit. The in-play back bet should only ever be placed after the early payout has been triggered. Use the slider to vary the in-play back bet stake if you do not wish to lock in a profit.</string>
    <string name="odds_converter_calc_guide">Converts between decimal, fractional and American odds. Also shows implied probability.</string>

    <string name="find_bets_description">Searches real time odds for various UK bookmakers for upcoming English Premier League football games. The bets are shown based on the best rating for matched bet (100% rating = 100% of bookmaker stake retained after playing qualifying matched bet). Click on the bet to open in calculator.</string>

    <string name="save_bets_description">Shows a list of the saved bets on the device. Click on the bet to open in calculator.</string>
    <string name="bet_reminder">Bet Reminder</string>
    <string name="rating">Rating:</string>
    <string name="back_bet_commission">Back Bet Commission</string>
    <string name="percent2">%</string>
    <string name="partial_lay">Partial Lay</string>
    <string name="profit">Profit</string>


    <string name="add_second_part_lay">Add Second Part Lay +</string>
    <string name="part_lay_1">Part Lay 1</string>
    <string name="part_lay_2">Part Lay 2</string>
    <string name="place_market">Place Market</string>
    <string name="win_market">Win Market</string>
    <string name="if_extra_place">If Extra Place</string>
    <string name="extra_place_offer">Extra Place Offer</string>
    <string name="back_e_w_place_odds">Back E/W Place Odds</string>
    <string name="_1">1 /</string>
    <string name="total_back_stake">Total Back Stake</string>
    <string name="place_payout">Place Payout</string>
    <string name="place_lay_commission">Place Lay Commission</string>
    <string name="place_lay_odds">Place Lay Odds</string>
    <string name="back_e_w_stake">Back E/W Stake</string>
    <string name="win_lay_commission">Win Lay Commission</string>
    <string name="win_lay_odds">Win Lay Odds</string>
    <string name="each_way_calculator">Each Way Calculator</string>

    <string name="key_default_lay_commission">key_default_lay_commission</string>
    <string name="key_default_place_payout">key_default_place_payout</string>
    <string name="key_currency">key_currency"</string>
    <string name="custom">Custom</string>
    <string name="probability">Probability</string>
    <string name="american">American</string>
    <string name="decimal">Decimal</string>
    <string name="fractional">Fractional</string>

    <string name="odds_converter_calculator">Odds Converter Calculator</string>
    <string name="input_results">Input / Results</string>
    <string name="fine_adjust">Fine Adjust</string>
    <string name="refund">Refund Amount</string>

    <string name="refund_if_calculator">Refund If Calculator</string>
    <string name="refund_retention">Refund Retention</string>
    <string name="refund_trigger_lay_bet">Refund Trigger Lay Bet</string>
    <string name="initial_lay_bet">Initial Lay Bet</string>
    <string name="if_not_extra_place">If Not Extra Place</string>
    <string name="refund_calculator">Refund Calculator</string>
    <string name="early_payout_calculator">Early Payout Calculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="reminders_description">This function allows you to set a reminder notification to be received on your device at a time in the future. The notification will display any text entered below (can also be left blank). Press button to set date and time for the reminder. Please note that in some cases the reminder notification can be delayed by up to an hour. This is due to the device operating system optimisation for battery usage. It is therefore not recommended that this function be used as an important alarm at precise times. The device should not be in battery saving mode while using this function.</string>
    <string name="reminder_is_set">Reminder is set</string>

    <string name="delete_bet">Delete Bet?</string>
    <string name="bet_deleted">Bet deleted</string>
    <string name="delete">Delete</string>

    <string-array name="pref_lay_commission_labels">
        <item>0%</item>
        <item>1%</item>
        <item>2%</item>
        <item>3%</item>
        <item>4%</item>
        <item>5%</item>
    </string-array>

    <string-array name="pref_lay_commission_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="pref_currency">
        <item>£</item>
        <item>$</item>
        <item>€</item>
    </string-array>

    <string-array name="pref_place_payout_labels">
        <item>1/4</item>
        <item>1/5</item>
    </string-array>

    <string-array name="pref_place_payout_values">
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>