<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

</data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_odds_converter_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/odds_converter_calc_guide"
                app:layout_constraintEnd_toEndOf="@+id/about_matched_betting_calc"
                app:layout_constraintStart_toStartOf="@+id/about_matched_betting_calc"
                app:layout_constraintTop_toBottomOf="@+id/heading_about_odds_converter_calc" />

            <TextView
                android:id="@+id/heading_about_odds_converter_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/subheading"
                android:text="@string/odds_converter_calculator"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/about_early_payout_calc"
                app:layout_constraintStart_toStartOf="@+id/about_early_payout_calc"
                app:layout_constraintTop_toBottomOf="@+id/about_early_payout_calc" />

            <TextView
                android:id="@+id/heading_about_early_payout_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/subheading"
                android:text="@string/early_payout_calculator"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/about_refund_if_calc"
                app:layout_constraintStart_toStartOf="@+id/about_refund_if_calc"
                app:layout_constraintTop_toBottomOf="@+id/about_refund_if_calc" />

            <TextView
                android:id="@+id/heading_about_refund_if_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/subheading"
                android:text="@string/refund_if_calculator"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/about_refund_calc"
                app:layout_constraintStart_toStartOf="@+id/about_refund_calc"
                app:layout_constraintTop_toBottomOf="@+id/about_refund_calc" />

            <TextView
                android:id="@+id/about_refund_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/refund_calc_guide"
                app:layout_constraintEnd_toEndOf="@+id/about_matched_betting_calc"
                app:layout_constraintStart_toStartOf="@+id/about_matched_betting_calc"
                app:layout_constraintTop_toBottomOf="@+id/heading_about_refund_calc" />

            <TextView
                android:id="@+id/heading_about_refund_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/subheading"
                android:text="@string/refund_calculator"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/about_each_way_calc"
                app:layout_constraintStart_toStartOf="@+id/about_each_way_calc"
                app:layout_constraintTop_toBottomOf="@+id/about_each_way_calc" />

            <TextView
                android:id="@+id/heading_about_each_way_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/subheading"
                android:text="@string/each_way_calculator"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/about_matched_betting_calc"
                app:layout_constraintStart_toStartOf="@+id/about_matched_betting_calc"
                app:layout_constraintTop_toBottomOf="@+id/about_matched_betting_calc" />

            <TextView
                android:id="@+id/heading_about_matched_betting_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:background="@drawable/subheading"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intro" />

            <TextView
                android:id="@+id/intro"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/intro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/about_matched_betting_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/matched_betting_calc_guide"
                app:layout_constraintEnd_toEndOf="@+id/heading_about_matched_betting_calc"
                app:layout_constraintStart_toStartOf="@+id/heading_about_matched_betting_calc"
                app:layout_constraintTop_toBottomOf="@+id/heading_about_matched_betting_calc" />

            <TextView
                android:id="@+id/about_each_way_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/each_way_calc_guide"
                app:layout_constraintEnd_toEndOf="@+id/about_matched_betting_calc"
                app:layout_constraintStart_toStartOf="@+id/about_matched_betting_calc"
                app:layout_constraintTop_toBottomOf="@+id/heading_about_each_way_calc" />

            <TextView
                android:id="@+id/about_refund_if_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/refund_if_calc_guide"
                app:layout_constraintEnd_toEndOf="@+id/about_matched_betting_calc"
                app:layout_constraintStart_toStartOf="@+id/about_matched_betting_calc"
                app:layout_constraintTop_toBottomOf="@+id/heading_about_refund_if_calc" />

            <TextView
                android:id="@+id/about_early_payout_calc"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/early_payout_calc_guide"
                app:layout_constraintEnd_toEndOf="@+id/about_matched_betting_calc"
                app:layout_constraintStart_toStartOf="@+id/about_matched_betting_calc"
                app:layout_constraintTop_toBottomOf="@+id/heading_about_early_payout_calc" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>