<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="oddsConverterCalculatorViewModel"
            type="com.example.android.kevkane87.matchedbettingcalculator.oddsconvertercalculator.OddsConverterCalculatorViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/inputCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:paddingBottom="@dimen/margin_normal"
                app:cardBackgroundColor="@color/black_tint"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_normal"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/heading_results2"
                        style="@style/text_normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/heading"
                        android:paddingTop="@dimen/padding_small"
                        android:paddingBottom="@dimen/padding_small"
                        android:text="@string/input_results"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/decimal_odds"
                        style="@style/EditText"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/green_dark"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_decimal" />

                    <EditText
                        android:id="@+id/american_odds"
                        style="@style/EditText"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/green_dark"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_american" />

                    <EditText
                        android:id="@+id/probability"
                        style="@style/EditText"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/green_dark"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_probability" />

                    <EditText
                        android:id="@+id/fractional_odds_numerator"
                        style="@style/EditText"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/green_dark"
                        android:ems="10"
                        android:inputType="number"
                        android:nextFocusDown="@id/fractional_odds_denominator"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/label_fractional" />

                    <TextView
                        android:id="@+id/label_fractional"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/fractional"
                        app:layout_constraintEnd_toEndOf="@+id/fractional_odds_denominator"
                        app:layout_constraintStart_toStartOf="@+id/fractional_odds_numerator"
                        app:layout_constraintTop_toBottomOf="@+id/heading_results2" />

                    <TextView
                        android:id="@+id/label_decimal"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/decimal"
                        app:layout_constraintEnd_toEndOf="@+id/decimal_odds"
                        app:layout_constraintStart_toStartOf="@+id/decimal_odds"
                        app:layout_constraintTop_toBottomOf="@+id/fractional_odds_numerator" />

                    <TextView
                        android:id="@+id/label_american"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/american"
                        app:layout_constraintEnd_toEndOf="@+id/american_odds"
                        app:layout_constraintStart_toStartOf="@+id/american_odds"
                        app:layout_constraintTop_toBottomOf="@+id/decimal_odds" />

                    <TextView
                        android:id="@+id/label_probability"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/probability"
                        app:layout_constraintEnd_toEndOf="@+id/probability"
                        app:layout_constraintStart_toStartOf="@+id/probability"
                        app:layout_constraintTop_toBottomOf="@+id/american_odds" />

                    <EditText
                        android:id="@+id/fractional_odds_denominator"
                        style="@style/EditText"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/green_dark"
                        android:ems="10"
                        android:inputType="number"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/fractional_odds_numerator"
                        app:layout_constraintStart_toEndOf="@+id/textView5"
                        app:layout_constraintTop_toTopOf="@+id/fractional_odds_numerator"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="@+id/fractional_odds_denominator"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/fractional_odds_denominator"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/american_odds_sign"
                        style="@style/text_normal"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="+"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="@+id/american_odds"
                        app:layout_constraintEnd_toStartOf="@+id/american_odds"
                        app:layout_constraintTop_toTopOf="@+id/american_odds" />

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percent"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/probability"
                        app:layout_constraintStart_toEndOf="@+id/probability"
                        app:layout_constraintTop_toTopOf="@+id/probability" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/button_background"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/inputCardView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_clear"
                app:layout_constraintTop_toBottomOf="@+id/inputCardView"
                app:layout_constraintWidth_percent="0.6"
                app:srcCompat="@drawable/ic_baseline_save_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_background"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/button_save"
                app:layout_constraintStart_toStartOf="@+id/inputCardView"
                app:layout_constraintTop_toBottomOf="@+id/inputCardView"
                app:srcCompat="@drawable/ic_baseline_clear_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>